feat: append kafka to updating account balance
